# aibot2priv

./: .gitignore  .gitmodules  DOCKER.md  Dockerfile  HOW TO RUN  POLYMETIS  README.md  activate_env.sh  docker-build.sh  docker-compose.yml  gradio_setup_controllers.sh  kill_all_ros2.sh  kill_moveit_tmux.sh  launch_moveit_tmux.sh  launch_position_control_tmux.sh  mutagen.yml  pyproject.toml  robot_control_menu.sh  switch_controllers.sh  update_dev_branch.sh  update_from_upstream.sh  ws-requirements.txt
.claude/: settings.local.json
.hf_lerobot/babycare/milk_power_2_20260421_v03/meta/: info.json
DATASET/: check_dataset_features.py
DATA_COLLECTION/: README.md  push_dataset_to_hub.sh  record_spacemouse_cartesian_vel_real.sh  record_spacemouse_ee_fast.sh
EVALUATION/: eval.sh  eval_real_panda_cartesian_vel.sh
FIX/: fix_pytorch_cuda.sh  fix_ros2_daemon.sh  fix_rtps_shm_errors.sh
INFERENCE/: test_async_robot_client.py  test_simple_inference.py
INSTALL/: UV_INSTALL.md  fix_rtx5090_venv.sh  setup_lerobot_rtx5090_venv.sh  setup_with_uv.sh
REAL_ROBOT/: CAMERA_SETUP.md  README.md  RUN_REAL_ROBOT  SIM_REAL_CONTROLLER_ALIGNMENT_REPORT.md  camera_config.yaml  controller_analysis_report.md  launch_realsense_camera.sh  move_to_joint_angles.py  real_robot_control.py  realsense_ros2_publisher.py  spacemouse_cartesian_vel.py  spacemouse_control.py  spacemouse_control_copy.py  test_gripper.py  test_realsense_cameras.sh
RUN/: lerobot_commands.sh
TEST/: test_gripper_open_close.py  test_isaac_config.py  test_ros2_camera.py
TRAIN/: push.py  train.sh
gradio_agent/: .env  .gitignore  CONFIG_QUICKSTART.md  POLICY_CONFIG_README.md  config_flow.txt  demo_tool_calling.py  image_getter.py  policy_config.yaml  requirements.txt  robot_tools.py  setup.sh  simple_camera_stream.py  speaking.py  test.py  two_d_img_annotation_utils.py
isaac_franka_moveit_perception/: .gitignore  README.md  README_joint_movement.md  check_controller_status.py  current_position.py  example_cube_control.py  get_robot_state.py  gripper_control_module.py  isaac_sim_object_control.py  move_to_joint_angles.py  standalone_cube_control.py  test_cube_control.py
isaac_franka_moveit_perception/isaacsim/: franka_table.usd  franka_table_test1.usd  franka_table_test2.usd  franka_table_test4.usd
isaac_franka_moveit_perception/src/panda_moveit_config/config/: panda.ros2_control.xacro
isaac_franka_moveit_perception/src/panda_moveit_config/launch/: demo.launch.py
isaac_franka_moveit_perception/src/perception_pipeline/: package.xml
isaac_franka_moveit_perception/src/perception_pipeline/launch/: pick_and_place.launch.py
lerobot_robot_ros/: pyproject.toml
lerobot_robot_ros/lerobot_robot_ros/: __init__.py  config.py  moveit_servo.py  robot.py  ros2_camera.py  ros_interface.py
lerobot_teleoperator_devices/: pyproject.toml
lerobot_teleoperator_devices/lerobot_teleoperator_devices/: __init__.py  config_keyboard_joint.py  config_spacemouse.py  config_spacemouse_cartesian_vel_panda.py  config_spacemouse_ee_panda.py  spacemouse.py  spacemouse_cartesian_vel_panda.py  spacemouse_ee_panda.py
lerobot_teleoperator_devices/lerobot_teleoperator_devices/processors/: delta_to_joints.py
lerobot_teleoperator_devices/lerobot_teleoperator_devices/processors/_cache/: panda_resolved.urdf
misc/FIX/: cleanup_ros2.sh
misc/INFERENCE/: test_async_policy_server.py  test_simple_inference_with_robot.py
misc/TEST/: test_panda_joint_trajectory.py  test_robot_classes.py
polymetis/lerobot_franka_teleop/: README.MD  README_zh.MD  setup.py
polymetis/lerobot_franka_teleop/lerobot_robot_franka/: setup.py
polymetis/lerobot_franka_teleop/lerobot_robot_franka/lerobot_robot_franka/: franka.py  franka_interface_client.py
polymetis/lerobot_franka_teleop/lerobot_teleoperator_franka/: setup.py
polymetis/lerobot_franka_teleop/lerobot_teleoperator_franka/lerobot_teleoperator_franka/: __init__.py  teleop.py  teleop_factory.py
polymetis/lerobot_franka_teleop/scripts/config/: record_cfg.yaml
polymetis/lerobot_franka_teleop/scripts/core/: reset_robot.py  run_record.py  run_replay.py  run_visualize.py  test_spacemouse_control.py
polymetis/lerobot_franka_teleop/scripts/help/: help_info.py
ros2/isaac_franka_moveit_perception/: README_gripper_module.md  example_usage.py  launch_servo_tmux.sh  moveit_perceptoin_world.usd  test_joint_movement.py
ros2/isaac_franka_moveit_perception/isaacsim/: franka_table_test.usd  franka_table_test3.usd  franka_table_test5.usd  franka_table_test6.usd  test_table1.usd
ros2/lerobot_robot_ros/: README.md  pyproject.toml
ros2/lerobot_robot_ros/lerobot_robot_ros/: __init__.py  aibot2_camera.py  aibot2_config.py  aibot2_interface.py  aibot2_robot.py  robot.py  ros_interface.py
ros2/lerobot_teleoperator_devices/: pyproject.toml
ros2/lerobot_teleoperator_devices/lerobot_teleoperator_devices/: __init__.py  config_keyboard_ee_panda.py  config_spacemouse_ee_panda.py  config_vr_aibot2.py  keyboard_ee_panda.py  keyboard_joint.py  spacemouse_cartesian_vel_panda.py  vr_aibot2.py
scripts/: gradio_setup_controllers.sh  launch_moveit_tmux.sh  launch_position_control_tmux.sh  robot_control_menu.sh  switch_controllers.sh
tests/: test_aibot2_gripper.py  test_vr_aibot2_teleop.py
ui/gradio_agent/: CONFIG_QUICKSTART.md  POLICY_CONFIG_README.md  README.md  REAL_PANDA_OPERATE.md  demo_tool_calling.py  image_getter.py  policy_config.yaml  preload_policy_standalone.py  robot_tools.py  system_prompt_tool_calling.txt  test.py  utils.py  world_model.py
vla/DATA_COLLECTION/: README.md  README_Aibot2_combined_15fps.md  convert_aibot2_rosbags.py  convert_aibot2_rosbags.sh  gripper_issue  merge_aibot2_hil_datasets.py  merge_aibot2_hil_datasets.sh  record_aibot2.sh  record_spacemouse_cartesian_vel_real.sh  record_spacemouse_ee.sh  record_spacemouse_ee_fast_polymetis.sh  test_aibot2_record.py
vla/EVALUATION/: eval.sh  eval_aibot2_control_poses_target.sh  eval_real_panda_cartesian_vel.sh
vla/TRAIN/: train.sh  train_aibot2.sh  train_multi_gpu.sh  train_pi05_8bit.py  train_pi05_aibot2.sh
(+9 files in other folders)
